<resources>
    <string name="app_name">IMeasurer</string>
    <string name="login_hint">请输入用户名</string>
    <string name="pwd">请输入密码</string>
    <string name="action_login">登录</string>
    <string name="register_hint">没有账号？去注册</string>
    <string name="title_activity_login">Sign in</string>
    <string name="scan_qrcode_prompt">请对准二维码进行扫描</string>
    <string name="scan_input_prompt">手动输入二维码编号</string>
    <!-- Strings related to signIn -->
    <string name="action_sign_in">登录</string>
    <string name="signup_prompt">立即注册</string>
    <string name="error_invalid_email">用户名无效</string>
    <string name="error_invalid_password">输入密码格式不正确</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">请输入该字段</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name_enter_valid">用户名输入无效</string>
    <string name="pwd_enter_valid">请输入6-20位长度的密码</string>
    <string name="login_success_hint">登录成功！</string>
    <string name="progress_dialog_message">处理中, 请稍等...</string>
    <string name="action_sign_up">注册</string>
    <string name="have_account">已有账号？去登录</string>
    <string name="prompt_name">请输入账号名</string>
    <string name="prompt_pwd">请输入密码</string>
    <string name="prompt_renter_pwd">请再次输入密码</string>
    <string name="pwd_not_same">两次密码不一样，请检查</string>
    <string name="register_success_hint">注册成功</string>
    <string name="sign_out">退出登录</string>
    <string name="prompt_forget_pwd">忘记密码？</string>
    <string name="btn_text_main">首页</string>
    <string name="btn_text_measure">测量</string>
    <string name="btn_text_help">帮助</string>
    <string name="btn_text_about">个人中心</string>
    <string name="menu_action">操作</string>
    <string name="person_center">个人中心</string>
    <string name="main_act_title">首页</string>
    <string name="main_act_action_menu_title">测量</string>
    <string name="measurement_item_user_name">用户名：</string>
    <string name="measurement_item_user_gender">性别：</string>
    <string name="measurement_item_user_xw_title">胸围:</string>
    <string name="measurement_item_user_tw_title">臀围:</string>
    <string name="measurement_item_user_yw_title">腰围:</string>
    <string name="loading_measurement_error">测量数据加载错误</string>
    <string name="save_measurement_success">测量数据保存成功</string>
    <string name="no_measurements_all">暂无测量数据</string>
    <string name="no_measurements_add">去测量</string>
    <string name="measure_gender_title">性别：</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="measure_height_prompt">身高:</string>
    <string name="cm_unit">cm</string>
    <string name="measure_weight_prompt">体重:</string>
    <string name="kg_unit">kg</string>
    <string name="measure_ruler_state">电子尺状态:</string>
    <string name="measure_ruler_battery">电量：</string>
    <string name="measure_button_prompt">开始测量</string>
    <string name="measure_act_title">量体</string>
    <string name="scan_device">扫描设备</string>
    <string name="disconnect_device">断开连接</string>
    <string name="save_measure_result">保存</string>
    <string name="measure_item_title">测量项目</string>
    <string name="measure_value_title">测量值</string>
    <string name="xiongwei_prompt">胸围</string>
    <string name="yaowei_prompt">腰围</string>
    <string name="tunwei_prompt">臀围</string>
    <string name="stop_scan">停止扫描</string>
    <string name="start_scan">开始扫描</string>
    <string name="device_connected">蓝牙已连接</string>
    <string name="prompt_connected">已连接</string>
    <string name="prompt_disconnected">未连接</string>
    <string name="device_disconnected">蓝牙未连接</string>
    <string name="ble_info">蓝牙状态：</string>
    <string name="battery_unknown">N/A</string>
    <string name="connecting">连接中...</string>
    <string name="choose_device_prompt">请选择蓝牙设备</string>
    <string name="unKnownError">未知错误</string>
    <string name="bluetooth_disabled">请开启蓝牙</string>
    <string name="bluetooth_not_avavilable">蓝牙当前不可用</string>
    <string name="scan_finished">扫描完成</string>
    <string name="measuring">正在测量...</string>
    <string name="scanning">正在扫描...</string>
    <string name="today_measurement">今天测量记录</string>
    <string name="more_measurement">查看更多</string>
    <string name="user_center">用户中心</string>
    <string name="call_camera">扫码二维码</string>
    <string name="scan_qrcode">扫码</string>
    <string name="img_logo">logo</string>
    <string name="remember_pwd">记住密码</string>
    <string name="third_login_prompt">第三方登录</string>
    <string name="valid_code_prompt">请输入验证码</string>
    <string name="get_valid_prompt">获取验证码</string>
    <string name="press_again_exit">再按一次退出</string>
    <string name="signining">登录中...</string>
    <string name="net_connect_out">网络中断，请检查您的网络状态</string>
    <string name="service_down">当前服务不可用</string>
    <string name="something_error">出错啦</string>
    <string name="net_connect_timeout">网络连接超时，请检查您的网络</string>
    <string name="valid_code_send_success">验证码发送成功</string>
    <string name="plz_valid_mobile">请输入正确格式的手机号</string>
    <string name="prompt_mobile">请输入手机号</string>
    <string name="plz_valid_code">请输入有效的验证码</string>
    <string name="prompt_valid_code">请输入验证码</string>
    <string name="sure">确定</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="plz_valid_new_pwd">请输入新密码</string>
    <string name="plz_valid_new_pwd2">请再次输入密码</string>
    <string name="plz_same_pwd">两次密码不一样，请检查</string>
    <string name="reset_pwd_success">重置密码成功</string>
    <string name="scan">扫一扫</string>
    <string name="slogan_scan">点击扫一扫，扫描微信公众号中的二维码</string>
    <string name="ble_hint">蓝牙：</string>
    <string name="user_toolbar_title">设置</string>
    <string name="unit_times">人次</string>
    <string name="total_times">累计量体：</string>
    <string name="curr_times">本月量体：</string>
    <string name="user_hint">某某</string>
    <string name="prompt_user_manage">账户管理</string>
    <string name="prompt_link_device">连接设备</string>
    <string name="prompt_update">检查更新</string>
    <string name="prompt_latest_version">已经最新版</string>
    <string name="prompt_use_help">使用说明</string>
    <string name="prompt_feedback">反馈</string>
    <string name="prompt_contact">联系我们</string>
    <string name="prompt_app_help">联系电话：0575-85595213</string>
    <string name="enter_old_pwd">输入旧密码</string>
    <string name="enter_new_pwd">重置新密码</string>
    <string name="enter_new_pwd2">确认新密码</string>
    <string name="sure_edit">确认修改</string>
    <string name="edit_pwd">修改密码</string>
    <string name="hint_feedback">问题描述：</string>
    <string name="submit">提交</string>
    <string name="company_name">浙江格心科技有限公司</string>
    <string name="company_tel">电话: 0575-85595213</string>
    <string name="company_website">网址: www.npclo.com</string>
    <string name="company_email">邮箱: info@npclo.com</string>
    <string name="company_address">地址: 浙江省绍兴市柯桥区创意大厦809室</string>
    <string name="copyright">&#169; 浙江格心科技有限公司</string>
    <string name="logout_success">退出登录成功</string>
    <string name="unconnected">未连接</string>
    <string name="connected">已连接</string>
    <string-array name="angle_items">
        <item>ItemD</item>
        <item>ItemE</item>
        <item>ItemF</item>
        <item>ItemO</item>
        <item>ItemP</item>
        <item>ItemN</item>
    </string-array>
    <string-array name="items_sequence">
        <item>头围</item>
        <item>颈围</item>
        <item>肩宽</item>
        <item>左肩斜</item>
        <item>右肩斜</item>
        <item>弯背角度</item>
        <item>臂围</item>
        <item>手腕围</item>
        <item>臂长</item>
        <item>胸围</item>
        <item>下胸围</item>
        <item> 肚围</item>
        <item>腰围</item>
        <item>凹腰角度</item>
        <item>上凸肚角度</item>
        <item>下凸肚角度</item>
        <item>臀围</item>
        <item>大腿围</item>
        <item>中部大腿围</item>
        <item>膝围</item>
        <item>小腿围</item>
        <item>脚踝围</item>
        <item>通裆</item>
        <item>髂骨高度</item>
    </string-array>
    <string name="enter_qrcode_prompt">请输入二维码编号</string>
    <string name="valid_qrcode_prompt">请确认您输入的二维码编号是正确的</string>
    <string name="btn_sure">确认</string>
    <string name="plz_enter_qrcode">请输入二维码</string>
    <string name="preferences_actions_title">扫描成功</string>
    <string name="preferences_auto_focus_title">自动对焦</string>
    <string name="preferences_auto_open_web_title">自动打开网页</string>
    <string name="preferences_bulk_mode_summary">连续扫描并保存多个条码</string>
    <string name="preferences_bulk_mode_title">批量扫描模式</string>
    <string name="preferences_copy_to_clipboard_title">复制到剪贴板</string>
    <string name="preferences_custom_product_search_summary" formatted="false">替换：％s=内容，％f=格式，％t=类型</string>
    <string name="preferences_custom_product_search_title">自定义搜索网址</string>
    <string name="preferences_decode_1D_industrial_title">一维码：工业</string>
    <string name="preferences_decode_1D_product_title">一维码：商品</string>
    <string name="preferences_decode_Aztec_title">Aztec</string>
    <string name="preferences_decode_Data_Matrix_title">Data Matrix</string>
    <string name="preferences_decode_PDF417_title">PDF417 (测试)</string>
    <string name="preferences_decode_QR_title">二维码</string>
    <string name="preferences_device_bug_workarounds_title">设备适配</string>
    <string name="preferences_disable_barcode_scene_mode_title">不进行条形码场景匹配</string>
    <string name="preferences_disable_continuous_focus_summary">使用标准对焦模式</string>
    <string name="preferences_disable_continuous_focus_title">不持续对焦</string>
    <string name="preferences_disable_exposure_title">不曝光</string>
    <string name="preferences_disable_metering_title">不使用距离测量</string>
    <string name="preferences_front_light_auto">自动</string>
    <string name="preferences_front_light_off">关</string>
    <string name="preferences_front_light_on">开</string>
    <string name="preferences_front_light_summary">设置闪光灯模式</string>
    <string name="preferences_front_light_title">闪光灯</string>
    <string name="preferences_general_title">扫描设置</string>
    <string name="preferences_history_summary">自动将条码存入历史记录</string>
    <string name="preferences_history_title">存入历史记录</string>
    <string name="preferences_invert_scan_summary">扫描黑色背景上的白色条码。仅适用于部分设备。</string>
    <string name="preferences_invert_scan_title">反色</string>
    <string name="preferences_name">选项</string>
    <string name="preferences_orientation_title">不自动旋转</string>
    <string name="preferences_play_beep_title">播放提示音</string>
    <string name="preferences_remember_duplicates_summary">在历史记录中保存重复的记录</string>
    <string name="preferences_remember_duplicates_title">保存重复记录</string>
    <string name="preferences_result_title">搜索设置</string>
    <string name="preferences_scanning_title">条码类型</string>
    <string name="preferences_search_country">搜索引擎国别</string>
    <string name="preferences_supplemental_summary">尝试检索关于条码内容的更多信息</string>
    <string name="preferences_supplemental_title">检索更多信息</string>
    <string name="preferences_vibrate_title">振动</string>
    <string name="msg_error">错误</string>
    <string name="msg_invalid_value">值无效</string>
    <string name="next_person">下一个量体</string>
</resources>
