<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/scan_toggle_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btn_bg"
            android:textColor="@color/white"
            android:text="@string/scan_device" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/ble_info" />

            <TextView
                android:id="@+id/ruler_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnected"
                android:textColor="@color/ble_disconnected" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:text="@string/measure_ruler_battery" />

            <TextView
                android:id="@+id/ruler_battery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/battery_unknown"
                android:textColor="@color/battery_color" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/measure_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/btn_bg"
        android:text="@string/measure_button_prompt"
        android:textColor="@color/white" />

</LinearLayout>