<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/base_toolbar" />

            <ImageView
                android:layout_width="157dp"
                android:layout_height="116dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="44dp"
                android:src="@mipmap/logo_blue" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="44dp"
                android:text="@string/company_name"
                android:textColor="@color/c434446"
                android:textSize="22sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="18dp"
                android:autoLink="phone"
                android:text="@string/company_tel"
                android:textColor="@color/c434446"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="7dp"
                android:autoLink="web"
                android:text="@string/company_website"
                android:textColor="@color/c434446"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="7dp"
                android:autoLink="email"
                android:text="@string/company_email"
                android:textColor="@color/c434446"
                android:textSize="16sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="22dp"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="17dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="17dp"
                android:layout_marginTop="7dp"
                android:text="@string/company_address"
                android:textColor="@color/c434446"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="12dp"
        android:text="@string/copyright"
        android:textAlignment="center"
        android:textColor="@color/c999"
        android:textSize="14sp" />

</LinearLayout>