<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!--<include layout="@layout/base_toolbar" />-->

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/input_old_pwd"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_radius_4_df"
        android:gravity="center_vertical"
        android:hint="@string/enter_old_pwd"
        android:inputType="textWebPassword"
        android:textColor="@color/c333"
        android:textColorHint="@color/dfdfdf"
        android:textSize="18sp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/input_new_pwd1"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_radius_4_df"
        android:gravity="center_vertical"
        android:hint="@string/enter_new_pwd"
        android:inputType="textWebPassword"
        android:textColor="@color/c333"
        android:textColorHint="@color/dfdfdf"
        android:textSize="18sp" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/input_new_pwd2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/btn_radius_4_df"
        android:gravity="center_vertical"
        android:hint="@string/enter_new_pwd2"
        android:inputType="textWebPassword"
        android:textColor="@color/c333"
        android:textColorHint="@color/dfdfdf"
        android:textSize="18sp" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/action_submit"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="17dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="81dp"
        android:background="@drawable/btn_radius_solid_primary"
        android:text="@string/sure_edit"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>